@@ -24,6 +24,8 @@
 
 #ifdef __WIN32__
 #include <dir.h>
+#else
+#include <unistd.h>
 #endif
 
 #include "config.h"
